// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should NOT render <Message /> 1`] = `null`;

exports[`Message component should render <Message /> and compare with snapshot 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <View>
      <Text
        style={
          [
            {
              "backgroundColor": "transparent",
              "color": "#b2b2b2",
              "fontSize": 12,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Apr 8, 2019
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        {
          "marginBottom": 10,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                [
                  {},
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "black",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    [
                      [
                        {
                          "color": "black",
                          "fontSize": 16,
                          "lineHeight": 20,
                          "marginBottom": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "marginTop": 5,
                        },
                        undefined,
                        undefined,
                      ],
                      undefined,
                    ]
                  }
                >
                  test
                </Text>
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "marginBottom": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                7:20 PM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render <Message /> with Avatar 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <View>
      <Text
        style={
          [
            {
              "backgroundColor": "transparent",
              "color": "#b2b2b2",
              "fontSize": 12,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Apr 8, 2019
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        {
          "marginBottom": 10,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "marginRight": 8,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="image"
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 20,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            {
              "backgroundColor": "transparent",
            },
            [
              {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              undefined,
            ],
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                [
                  {},
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "black",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    [
                      [
                        {
                          "color": "black",
                          "fontSize": 16,
                          "lineHeight": 20,
                          "marginBottom": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "marginTop": 5,
                        },
                        undefined,
                        undefined,
                      ],
                      undefined,
                    ]
                  }
                >
                  test
                </Text>
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "marginBottom": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                7:20 PM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render null if user has no Avatar 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <View>
      <Text
        style={
          [
            {
              "backgroundColor": "transparent",
              "color": "#b2b2b2",
              "fontSize": 12,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Apr 8, 2019
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        {
          "marginBottom": 10,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                [
                  {},
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "black",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    [
                      [
                        {
                          "color": "black",
                          "fontSize": 16,
                          "lineHeight": 20,
                          "marginBottom": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "marginTop": 5,
                        },
                        undefined,
                        undefined,
                      ],
                      undefined,
                    ]
                  }
                >
                  test
                </Text>
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "marginBottom": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                7:20 PM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
